# Friday

./: .gitignore  README.md  pyproject.toml
docs/: friday-memory.md
docs/superpowers/plans/: 2026-04-01-friday-memory-mechanism.md  2026-04-05-friday-three-layer-memory-implementation.md
docs/superpowers/specs/: 2026-04-05-friday-memory-architecture-design.md
src/friday/: __init__.py  cli.py  memory_settings.py  message_context.py  nowledge_tools.py  output_cleaning.py  plugin.py
src/friday/memory/: __init__.py  extractor.py  models.py  prompting.py  service.py  store.py
tests/: test_message_context.py  test_nowledge_tools.py  test_output_cleaning.py  test_plugin_memory.py
tests/memory/: test_extractor.py  test_prompting.py  test_service.py  test_store.py
