[project]
name = "friday"
version = "0.1.0"
description = "A Telegram bot built on BUB."
readme = "README.md"
authors = [
    { name = "Muzych", email = "haxk1024@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bub>=0.3.3",
]

[project.scripts]
friday = "friday:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
